--- a/client/src/i18n/locales/he.json
+++ b/client/src/i18n/locales/he.json
@@ -112,7 +112,7 @@
     "taste": "טעם",
     "satiety": "שובע",
     "energy": "אנרגיה",
-    "remove":"מחק מנה"
+    "remove": "מחק מנה"
   },
   "camera": {
     "title": "סורק מזון",
@@ -453,6 +453,145 @@
     "errors": {
       "generic": "שגיאה",
       "ok": "אישור"
+    }
+  },
+  "privacy": {
+    "title": "מדיניות פרטיות",
+    "intro": "נספח מדיניות פרטיות והגנת מידע זה נערך בליווי ייעוץ משפטי מקצועי ומהווה חלק בלתי נפרד מהסכם תנאי השימוש של אפליקציית CALO. מדיניות זו נועדה להסדיר את עקרונות הגנת הפרטיות, אבטחת המידע, הגבלות השימוש, העברות מידע בינלאומיות, והתחייבויות משפטיות נוספות של החברה והמפתחים מטעמה, כלפי משתמשי הקצה.",
+    "lastUpdated": "עודכן לאחרונה",
+    "updateDate": "אוגוסט 2025",
+    "sections": {
+      "regulatory_scope": {
+        "title": "תחולה רגולטורית ומסגרת משפטית",
+        "content": "אפליקציית CALO זמינה למשתמשים במדינות שונות, לרבות מחוץ לישראל, ולפיכך היא כפופה להוראות רגולציה חוצת-גבולות וחוקי פרטיות בינלאומיים.",
+        "subsections": [
+          {
+            "title": "תאימות בינלאומית",
+            "content": "האפליקציה פועלת תחת המסגרות הרגולטוריות הבאות:",
+            "items": [
+              "תקנות הגנת המידע הכלליות של האיחוד האירופי (GDPR)",
+              "חוק פרטיות הצרכן של קליפורניה (CCPA)",
+              "חוק הגנת הפרטיות הישראלי",
+              "כל דין פרטיות חל אחר שיחול מכוח מקום מושב המשתמש"
+            ]
+          },
+          {
+            "title": "יישום זכויות GDPR",
+            "content": "בהתאם ל-GDPR, המשתמשים יכולים לממש את הזכויות הבאות:",
+            "items": [
+              "זכות לעיון במידע האישי",
+              "זכות לתיקון ומחיקה (הזכות להישכח)",
+              "זכות לניידות המידע",
+              "זכות להתנגד ולמנוע קבלת החלטות אוטומטיות"
+            ]
+          },
+          {
+            "title": "תאימות CCPA",
+            "content": "בהתאם ל-CCPA, המשתמשים זכאים:",
+            "items": [
+              "לקבל גילוי מלא על איסוף ושימוש בנתוניהם",
+              "לסרב למכירת נתונים",
+              "לדרוש מחיקה ולהתנגד לעיבוד"
+            ]
+          }
+        ]
+      },
+      "sensitive_data": {
+        "title": "מידע רגיש ונתוני בריאות",
+        "content": "אנו מטפלים בסוגים שונים של מידע רגיש באמצעי זהירות ואבטחה מתאימים.",
+        "subsections": [
+          {
+            "title": "סיווג מידע רגיש",
+            "content": "האפליקציה עשויה לעבד מידע שמספק המשתמש הנחשב רגיש על פי חוקי הפרטיות:",
+            "items": [
+              "העדפות תזונתיות ודיאטטיות",
+              "תסמינים או מצבים בריאותיים",
+              "אינדיקטורים ביומטריים ואורח חיים",
+              "הרגלי אכילה ודפוסים אישיים"
+            ]
+          },
+          {
+            "title": "הבהרה רפואית",
+            "content": "חשוב: השירות אינו מספק:",
+            "items": [
+              "ייעוץ רפואי מקצועי או אבחנה",
+              "שירותי חירום או קליניים",
+              "תחליף להתייעצויות רפואיות עם מקצועיים מורשים"
+            ]
+          },
+          {
+            "title": "הסכם עיבוד נתונים",
+            "content": "חתמנו על נספח עיבוד נתונים (DPA) עם OpenAI, המיישם אמצעי הגנה תעשייתיים:",
+            "items": [
+              "תאימות SOC 2 Type II",
+              "תקני ISO/IEC 27001 ו-27701",
+              "מסלולי ביקורת ויומני גישה לנתוני משתמשים"
+            ]
+          }
+        ]
+      },
+      "liability_limitation": {
+        "title": "הגבלת אחריות ואחריות המשתמש",
+        "content": "סעיף זה מתאר את הגבלות האחריות שלנו ואת האחריות שלכם כמשתמשים באפליקציית CALO.",
+        "subsections": [
+          {
+            "title": "הבהרת אחריות השירות",
+            "content": "השירות ניתן 'כמות שהוא' ו'כפי שזמין' ללא כל אחריות מפורשת או משתמעת:",
+            "items": [
+              "דיוק או שלמות הנתונים",
+              "זמינות המערכת או שימוש ללא הפסקה",
+              "התאמה למטרה מסוימת"
+            ]
+          },
+          {
+            "title": "הגבלת נזקים",
+            "content": "החברה לא תהיה אחראית עבור:",
+            "items": [
+              "נזקים ישירים, עקיפים או תוצאתיים",
+              "אובדן רווחים או נתונים",
+              "שגיאות, עיכובים או כשלי מערכת, למעט כפי שנדרש על פי החוק החל"
+            ]
+          },
+          {
+            "title": "שיפוי על ידי המשתמש",
+            "content": "המשתמשים מסכימים לשפות ולהחזיק את החברה בנקיון מפני:",
+            "items": [
+              "כל תביעה הנובעת משימוש לרעה בשירות",
+              "הפרה של תנאי השימוש הללו",
+              "פגיעה בזכויות צד שלישי או הפרה של מדיניות OpenAI"
+            ]
+          }
+        ]
+      },
+      "cookies_analytics": {
+        "title": "עוגיות וכלי אנליטיקה",
+        "content": "אנו משתמשים בטכנולוגיות מעקב שונות כדי לשפר את החוויה שלכם ולנתח את ביצועי האפליקציה. יש לכם שליטה על הטכנולוגיות הללו ואתם יכולים לנהל את ההעדפות שלכם."
+      },
+      "data_storage": {
+        "title": "אחסון נתונים, העברות והצפנה",
+        "content": "הנתונים האישיים שלכם עשויים להיות מאוחסנים ומעובדים בשרתים הממוקמים בישראל, באיחוד האירופי ובארצות הברית (AWS, Azure). אנו מיישמים הצפנה חזקה הן במעבר (TLS 1.2+) והן באחסון (AES-256), יחד עם מדיניות בקרת גישה, גיבויים קבועים ופרוטוקולי אבטחה מקיפים."
+      },
+      "user_rights": {
+        "title": "הזכויות שלכם לפרטיות",
+        "content": "יש לכם זכויות מקיפות לגבי הנתונים האישיים שלכם תחת חוקי הפרטיות החלים.",
+        "subsections": [
+          {
+            "title": "זכויות גישה ובקרה",
+            "content": "יש לכם זכות:",
+            "items": [
+              "לגשת לנתונים האישיים שלכם שברשותנו",
+              "לתקן נתונים לא מדויקים או לא שלמים",
+              "למחוק את הנתונים האישיים שלכם (זכות למחיקה)",
+              "לייצא את הנתונים שלכם בפורמט נייד",
+              "להתנגד לעיבוד הנתונים שלכם"
+            ]
+          },
+          {
+            "title": "כיצד לממש את הזכויות שלכם",
+            "content": "כדי לממש כל אחת מהזכויות הללו, אנא צרו איתנו קשר באמצעות המידע שמסופק בסעיף יצירת קשר. נגיב לבקשתכם תוך 30 יום."
+          }
+        ]
+      }
     }
   }
 }
