--- a/client/src/i18n/locales/en.json
+++ b/client/src/i18n/locales/en.json
@@ -1,27 +1,155 @@
 {
-  "common": {
-    "loading": "Loading...",
-    "error": "Error",
+  "questionnaire": {
+    "title": "Health Questionnaire",
+    "loading": "Loading questionnaire...",
+    "saving": "Saving...",
     "success": "Success",
-    "cancel": "Cancel",
-    "save": "Save",
-    "delete": "Delete",
-    "edit": "Edit",
-    "update": "Update",
-    "add": "Add",
-    "search": "Search",
-    "filter": "Filter",
-    "back": "Back",
-    "next": "Next",
-    "previous": "Previous",
-    "close": "Close",
-    "yes": "Yes",
-    "no": "No",
-    "ok": "OK",
-    "retry": "Retry",
-    "refresh": "Refresh",
-    "view_all": "View All",
-    "calories": "Calories"
+    "error": "Error",
+    "savedSuccessfully": "Your questionnaire has been saved successfully!",
+    "saveFailed": "Failed to save questionnaire. Please try again.",
+    "step": "Step",
+    "sectionUnavailable": "This section is temporarily unavailable.",
+    "steps": {
+      "personal": {
+        "title": "Personal Information",
+        "subtitle": "Tell us about yourself to create a personalized plan"
+      },
+      "goals": {
+        "title": "Your Goals",
+        "subtitle": "What would you like to achieve?"
+      },
+      "activity": {
+        "title": "Physical Activity",
+        "subtitle": "How active are you currently?"
+      },
+      "health": {
+        "title": "Health Information",
+        "subtitle": "Any health conditions we should know about?"
+      },
+      "means": {
+        "title": "Lifestyle & Resources",
+        "subtitle": "Tell us about your daily routine and available resources"
+      },
+      "dietary": {
+        "title": "Dietary Preferences",
+        "subtitle": "What are your food preferences and restrictions?"
+      },
+      "lifestyle": {
+        "title": "Lifestyle Factors",
+        "subtitle": "Additional information about your lifestyle"
+      },
+      "preferences": {
+        "title": "Final Preferences",
+        "subtitle": "Last few details to personalize your experience"
+      }
+    },
+    "age": "Age",
+    "enterAge": "How old are you?",
+    "gender": "Gender",
+    "male": "Male",
+    "female": "Female",
+    "height": "Height (cm)",
+    "enterHeight": "Enter your height",
+    "weight": "Current Weight (kg)",
+    "enterWeight": "Enter your weight",
+    "targetWeight": "Target Weight (kg)",
+    "enterTargetWeight": "Enter your target weight",
+    "additionalPersonalInfo": "Additional Personal Information",
+    "addItem": "Add item",
+    "mainGoal": "Main Goal",
+    "loseWeight": "Lose Weight",
+    "gainWeight": "Gain Weight",
+    "maintainWeight": "Maintain Weight",
+    "improveHealth": "Improve Health",
+    "buildMuscle": "Build Muscle",
+    "other": "Other",
+    "goalTimeframe": "Goal Timeframe (days)",
+    "example90Days": "e.g., 90 days",
+    "commitmentLevel": "Commitment Level",
+    "easy": "Easy",
+    "moderate": "Moderate",
+    "strict": "Strict",
+    "activityLevel": "Physical Activity Level",
+    "sedentary": "Sedentary",
+    "lightlyActive": "Lightly Active",
+    "moderatelyActive": "Moderately Active",
+    "veryActive": "Very Active",
+    "sportFrequency": "Sport Frequency",
+    "medicalConditions": "Medical Conditions",
+    "medications": "Medications",
+    "mealsPerDay": "Meals Per Day",
+    "cookingPreference": "Cooking Preference",
+    "cooked": "Cooked meals",
+    "easyPrep": "Easy preparation",
+    "readyMade": "Ready-made meals",
+    "noCooking": "No cooking",
+    "availableCookingMethods": "Available Cooking Methods",
+    "microwave": "Microwave",
+    "oven": "Oven",
+    "stove": "Stove",
+    "pressureCooker": "Pressure Cooker",
+    "pan": "Pan",
+    "grill": "Grill",
+    "dailyFoodBudget": "Daily Food Budget",
+    "example50Budget": "e.g., $50",
+    "kosher": "Kosher",
+    "allergies": "Allergies",
+    "gluten": "Gluten",
+    "dairy": "Dairy",
+    "eggs": "Eggs",
+    "nuts": "Nuts",
+    "peanuts": "Peanuts",
+    "fish": "Fish",
+    "shellfish": "Shellfish",
+    "soy": "Soy",
+    "dietaryStyle": "Dietary Style",
+    "omnivore": "Omnivore",
+    "lowCarb": "Low Carb",
+    "keto": "Keto",
+    "vegetarian": "Vegetarian",
+    "vegan": "Vegan",
+    "mediterranean": "Mediterranean",
+    "lowFat": "Low Fat",
+    "lowSodium": "Low Sodium",
+    "sleepHours": "Sleep Hours Per Night",
+    "example7Hours": "e.g., 7 hours",
+    "smokingStatus": "Smoking Status",
+    "nonSmoker": "Non-smoker",
+    "smoker": "Smoker",
+    "programDuration": "Program Duration",
+    "month": "1 Month",
+    "threeMonths": "3 Months",
+    "sixMonths": "6 Months",
+    "year": "1 Year",
+    "unlimited": "Unlimited",
+    "uploadFrequency": "Upload Frequency",
+    "everyMeal": "Every Meal",
+    "daily": "Daily",
+    "severalWeekly": "Several Times Weekly",
+    "weekly": "Weekly",
+    "willingnessToFollow": "Willingness to Follow",
+    "personalizedTips": "Personalized Tips",
+    "notificationsPreference": "Notifications Preference",
+    "tip": "💡 All your data is securely encrypted and used only to create your personalized nutrition plan.",
+    "dataUpdated": "Your questionnaire has been updated successfully!",
+    "planCreated": "Your personalized nutrition plan has been created!",
+    "backToProfile": "Back to Profile",
+    "continueToApp": "Continue to App",
+    "saveError": "Failed to save questionnaire. Please try again.",
+    "finish": "Finish"
+  },
+  "validation": {
+    "ageRequired": "Age is required",
+    "genderRequired": "Gender is required",
+    "heightRequired": "Height is required",
+    "weightRequired": "Weight is required",
+    "mainGoalRequired": "Main goal is required",
+    "activityLevelRequired": "Activity level is required",
+    "dietaryStyleRequired": "Dietary style is required",
+    "mealsPerDayRequired": "Meals per day is required",
+    "cookingPreferenceRequired": "Cooking preference is required",
+    "sportFrequencyRequired": "Sport frequency is required",
+    "commitmentLevelRequired": "Commitment level is required"
   },
   "tabs": {
     "home": "Home",
@@ -367,14 +495,6 @@
     "birth_date": "Birth Date",
     "language_preference": "Language of choice"
   },
-  "questionnaire": {
-    "title": "Health Questionnaire",
-    "personal_details": "Personal Details",
-    "health_goals": "Health Goals",
-    "dietary_preferences": "Dietary Preferences",
-    "activity_level": "Activity Level",
-    "complete": "Complete"
-  },
   "meal_plans": {
     "title": "Meal Plans",
     "create_plan": "Create Plan",
@@ -630,5 +750,14 @@
       "openai_link": "OpenAI Privacy & Security Policy",
       "google_analytics_link": "Google Analytics Privacy Policy"
     }
+  },
+  "common": {
+    "of": "of",
+    "next": "Next",
+    "save": "Save",
+    "ok": "OK",
+    "weekly": "weekly",
+    "no": "No",
+    "yes": "Yes"
   }
 }
