--- a/client/src/i18n/locales/he.json
+++ b/client/src/i18n/locales/he.json
@@ -1,4 +1,156 @@
 {
+  "questionnaire": {
+    "title": "שאלון בריאות",
+    "loading": "טוען שאלון...",
+    "saving": "שומר...",
+    "success": "הצלחה",
+    "error": "שגיאה",
+    "savedSuccessfully": "השאלון נשמר בהצלחה!",
+    "saveFailed": "שמירת השאלון נכשלה. אנא נסה שוב.",
+    "step": "שלב",
+    "sectionUnavailable": "חלק זה אינו זמין כרגע.",
+    "steps": {
+      "personal": {
+        "title": "מידע אישי",
+        "subtitle": "ספר לנו על עצמך כדי ליצור תוכנית מותאמת אישית"
+      },
+      "goals": {
+        "title": "המטרות שלך",
+        "subtitle": "מה היית רוצה להשיג?"
+      },
+      "activity": {
+        "title": "פעילות גופנית",
+        "subtitle": "כמה פעיל אתה כרגע?"
+      },
+      "health": {
+        "title": "מידע בריאותי",
+        "subtitle": "יש מצבים בריאותיים שעלינו לדעת עליהם?"
+      },
+      "means": {
+        "title": "אורח חיים ומשאבים",
+        "subtitle": "ספר לנו על השגרה היומית ומשאבים זמינים"
+      },
+      "dietary": {
+        "title": "העדפות תזונה",
+        "subtitle": "מה העדפות המזון וההגבלות שלך?"
+      },
+      "lifestyle": {
+        "title": "גורמי אורח חיים",
+        "subtitle": "מידע נוסף על אורח החיים שלך"
+      },
+      "preferences": {
+        "title": "העדפות אחרונות",
+        "subtitle": "כמה פרטים אחרונים להתאמה אישית של החוויה"
+      }
+    },
+    "age": "גיל",
+    "enterAge": "בן כמה אתה?",
+    "gender": "מגדר",
+    "male": "זכר",
+    "female": "נקבה",
+    "other": "אחר",
+    "height": "גובה (ס\"מ)",
+    "enterHeight": "הזן את הגובה שלך",
+    "weight": "משקל נוכחי (ק\"ג)",
+    "enterWeight": "הזן את המשקל שלך",
+    "targetWeight": "משקל יעד (ק\"ג)",
+    "enterTargetWeight": "הזן את משקל היעד שלך",
+    "additionalPersonalInfo": "מידע אישי נוסף",
+    "addItem": "הוסף פריט",
+    "mainGoal": "מטרה עיקרית",
+    "loseWeight": "ירידה במשקל",
+    "gainWeight": "עלייה במשקל",
+    "maintainWeight": "שמירה על משקל",
+    "improveHealth": "שיפור בריאות",
+    "buildMuscle": "בניית שריר",
+    "goalTimeframe": "זמן השגת המטרה (ימים)",
+    "example90Days": "לדוגמה, 90 ימים",
+    "commitmentLevel": "רמת מחויבות",
+    "easy": "קל",
+    "moderate": "בינוני",
+    "strict": "קפדני",
+    "activityLevel": "רמת פעילות גופנית",
+    "sedentary": "יושבני",
+    "lightlyActive": "פעיל קלות",
+    "moderatelyActive": "פעיל בינוני",
+    "veryActive": "פעיל מאוד",
+    "sportFrequency": "תדירות ספורט",
+    "medicalConditions": "מצבים רפואיים",
+    "medications": "תרופות",
+    "mealsPerDay": "ארוחות ליום",
+    "cookingPreference": "העדפת בישול",
+    "cooked": "ארוחות מבושלות",
+    "easyPrep": "הכנה קלה",
+    "readyMade": "ארוחות מוכנות",
+    "noCooking": "ללא בישול",
+    "availableCookingMethods": "שיטות בישול זמינות",
+    "microwave": "מיקרוגל",
+    "oven": "תנור",
+    "stove": "כיריים",
+    "pressureCooker": "סיר לחץ",
+    "pan": "מחבת",
+    "grill": "גריל",
+    "dailyFoodBudget": "תקציב מזון יומי",
+    "example50Budget": "לדוגמה, ₪50",
+    "kosher": "כשר",
+    "allergies": "אלרגיות",
+    "gluten": "גלוטן",
+    "dairy": "חלב",
+    "eggs": "ביצים",
+    "nuts": "אגוזים",
+    "peanuts": "בוטנים",
+    "fish": "דגים",
+    "shellfish": "פירות ים",
+    "soy": "סויה",
+    "dietaryStyle": "סגנון תזונה",
+    "omnivore": "אוכל הכל",
+    "lowCarb": "דל פחמימות",
+    "keto": "קטוגני",
+    "vegetarian": "צמחוני",
+    "vegan": "טבעוני",
+    "mediterranean": "ים תיכוני",
+    "lowFat": "דל שומן",
+    "lowSodium": "דל נתרן",
+    "sleepHours": "שעות שינה ללילה",
+    "example7Hours": "לדוגמה, 7 שעות",
+    "smokingStatus": "מצב עישון",
+    "nonSmoker": "לא מעשן",
+    "smoker": "מעשן",
+    "programDuration": "משך התוכנית",
+    "month": "חודש",
+    "threeMonths": "3 חודשים",
+    "sixMonths": "6 חודשים",
+    "year": "שנה",
+    "unlimited": "ללא הגבלה",
+    "uploadFrequency": "תדירות העלאה",
+    "everyMeal": "כל ארוחה",
+    "daily": "יומי",
+    "severalWeekly": "מספר פעמים בשבוע",
+    "weekly": "שבועי",
+    "willingnessToFollow": "נכונות לעקוב",
+    "personalizedTips": "טיפים מותאמים אישית",
+    "notificationsPreference": "העדפת התראות",
+    "tip": "💡 כל הנתונים שלך מוצפנים בבטחה ומשמשים רק ליצירת תוכנית התזונה האישית שלך.",
+    "dataUpdated": "השאלון שלך עודכן בהצלחה!",
+    "planCreated": "תוכנית התזונה האישית שלך נוצרה!",
+    "backToProfile": "חזרה לפרופיל",
+    "continueToApp": "המשך לאפליקציה",
+    "saveError": "שמירת השאלון נכשלה. אנא נסה שוב.",
+    "finish": "סיום"
+  },
+  "validation": {
+    "ageRequired": "גיל נדרש",
+    "genderRequired": "מין נדרש",
+    "heightRequired": "גובה נדרש",
+    "weightRequired": "משקל נדרש",
+    "mainGoalRequired": "מטרה ראשית נדרשת",
+    "activityLevelRequired": "רמת פעילות נדרשת",
+    "dietaryStyleRequired": "סגנון תזונה נדרש",
+    "mealsPerDayRequired": "מספר ארוחות ליום נדרש",
+    "cookingPreferenceRequired": "העדפת בישול נדרשת",
+    "sportFrequencyRequired": "תדירות ספורט נדרשת",
+    "commitmentLevelRequired": "רמת מחויבות נדרשת"
+  },
   "common": {
     "loading": "טוען...",
     "error": "שגיאה",
@@ -336,16 +488,6 @@
     "email_validation_error": "נא להזין כתובת אימייל תקינה",
     "language_preference": "שפה מועדפת",
     "birth_date": "תאריך לידה"
-  },
-  "questionnaire": {
-    "title": "שאלון בריאות",
-    "personal_details": "פרטים אישיים",
-    "health_goals": "יעדי בריאות",
-    "dietary_preferences": "העדפות תזונתיות",
-    "activity_level": "רמת פעילות",
-    "complete": "השלמה",
-    "physical_activity": "פעילות גופנית",
-    "duplicate_question": "שאלה כפולה זוהתה - נא לבדוק"
   },
   "meal_plans": {
     "title": "תוכניות ארוחות",
