--- a/client/src/i18n/locales/he.json
+++ b/client/src/i18n/locales/he.json
@@ -174,7 +174,8 @@
     "refresh": "רענון",
     "view_all": "צפייה בהכל",
     "done": "לסגירה",
-    "calories": "קלוריות"
+    "calories": "קלוריות",
+    "cancle": "Cancle"
   },
   "tabs": {
     "home": "בית",
